--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -15,6 +16,7 @@
     <main id="main">
         <div class="photographer_section"></div>
     </main>
+    <script src="scripts/utils/domElementBuilder.js"></script>
     <script src="scripts/factories/photographer.js"></script>
     <script src="scripts/pages/index.js"></script>
   </body>
