--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="photographer_section"></div>
     </main>
     <script src="scripts/utils/domElementBuilder.js"></script>
+    <script src="scripts/utils/queryBuilder.js"></script>
     <script src="scripts/factories/photographer.js"></script>
     <script src="scripts/pages/index.js"></script>
   </body>
