--- a/photographer.html
+++ b/photographer.html
@@ -31,6 +31,11 @@
 				</form>
 			</div>
 		</div>
+    <script src="scripts/data/getPhotographer.js"></script>
+    <script src="scripts/factories/photographer.js"></script>
+    <script src="scripts/utils/dom/createElement.js"></script>
+    <script src="scripts/utils/dom/getElements.js"></script>
+    <script src="scripts/utils/queryBuilder.js"></script>
     <script src="/oc-p6-fisheye/scripts/utils/getUrlParam.js"></script>
     <script src="/oc-p6-fisheye/scripts/pages/photographer.js"></script>
     <script src="/oc-p6-fisheye/scripts/utils/contactForm.js"></script>
