--- a/photographer.html
+++ b/photographer.html
@@ -33,6 +33,8 @@
 		</div>
     <script src="scripts/data/getPhotographer.js"></script>
     <script src="scripts/factories/photographer.js"></script>
+    <script src="scripts/factories/media.js"></script>
+    <script src="scripts/utils/dom/appendElement.js"></script>
     <script src="scripts/utils/dom/createElement.js"></script>
     <script src="scripts/utils/dom/getElements.js"></script>
     <script src="scripts/utils/queryBuilder.js"></script>
