--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/index.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
   </head>
   <body>
     <header>
-        <img src="assets/images/logo.png" class="logo" />
+        <img src="/assets/images/logo.png" class="logo" />
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
     </main>
-    <script src="scripts/data/getPhotographers.js"></script>
-    <script src="scripts/utils/dom/createElement.js"></script>
-    <script src="scripts/utils/dom/getElements.js"></script>
-    <script src="scripts/utils/dom/appendElement.js"></script>
-    <script src="scripts/utils/queryBuilder.js"></script>
-    <script src="scripts/factories/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    <script src="/scripts/data/getPhotographers.js"></script>
+    <script src="/scripts/utils/dom/createElement.js"></script>
+    <script src="/scripts/utils/dom/getElements.js"></script>
+    <script src="/scripts/utils/dom/appendElement.js"></script>
+    <script src="/scripts/utils/queryBuilder.js"></script>
+    <script src="/scripts/factories/photographer.js"></script>
+    <script src="/scripts/pages/index.js"></script>
   </body>
 </html>
