--- a/photographer.html
+++ b/photographer.html
@@ -3,7 +3,7 @@
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye - photographe </title>
   </head>
@@ -31,15 +31,15 @@
 				</form>
 			</div>
 		</div>
-    <script src="scripts/data/getPhotographer.js"></script>
-    <script src="scripts/factories/photographer.js"></script>
-    <script src="scripts/factories/media.js"></script>
-    <script src="scripts/utils/dom/appendElement.js"></script>
-    <script src="scripts/utils/dom/createElement.js"></script>
-    <script src="scripts/utils/dom/getElements.js"></script>
-    <script src="scripts/utils/queryBuilder.js"></script>
-    <script src="/oc-p6-fisheye/scripts/utils/getUrlParam.js"></script>
-    <script src="/oc-p6-fisheye/scripts/pages/photographer.js"></script>
-    <script src="/oc-p6-fisheye/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/data/getPhotographer.js"></script>
+    <script src="/scripts/factories/photographer.js"></script>
+    <script src="/scripts/factories/media.js"></script>
+    <script src="/scripts/utils/dom/appendElement.js"></script>
+    <script src="/scripts/utils/dom/createElement.js"></script>
+    <script src="/scripts/utils/dom/getElements.js"></script>
+    <script src="/scripts/utils/queryBuilder.js"></script>
+    <script src="/scripts/utils/getUrlParam.js"></script>
+    <script src="/scripts/pages/photographer.js"></script>
+    <script src="/scripts/utils/contactForm.js"></script>
   </body>
 </html>
