--- a/photographer.html
+++ b/photographer.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d966140df4.js" crossorigin="anonymous"></script>
     <title>Fisheye - photographe </title>
   </head>
   <body>
@@ -32,6 +33,7 @@
 			</div>
 		</div>
     <script src="/scripts/data/getPhotographer.js"></script>
+    <script src="/scripts/factories/info.js"></script>
     <script src="/scripts/factories/photographer.js"></script>
     <script src="/scripts/factories/media.js"></script>
     <script src="/scripts/utils/dom/appendElement.js"></script>
