add import and export

--- a/photographer.html
+++ b/photographer.html
@@ -35,7 +35,8 @@
 				</form>
 			</div>
 		</div>
-    <script src="/scripts/utils/photographer/photographer.header.js"></script>
+    <script type="module" src="scripts/pages/photographer.js"></script>
+    <!-- <script src="/scripts/utils/photographer/photographer.header.js"></script>
     <script src="/scripts/utils/photographer/photographer.section.js"></script>
     <script src="/scripts/utils/photographer/photographer.section-info.js"></script>
     <script src="/scripts/utils/photographer/photographer.medias.js"></script>
@@ -53,6 +54,6 @@
     <script src="/scripts/utils/getUrlParam.js"></script>
     <script src="/scripts/pages/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
-    <script src="/scripts/utils/sortElement.js"></script>
+    <script src="/scripts/utils/sortElement.js"></script> -->
   </body>
 </html>
