--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
     <main id="main">
         <div class="photographer_section"></div>
     </main>
-    <script src="/scripts/data/getPhotographers.js"></script>
-    <script src="/scripts/utils/dom/createElement.js"></script>
-    <script src="/scripts/utils/dom/getPhotographerElements.js"></script>
-    <script src="/scripts/utils/dom/appendElement.js"></script>
-    <script src="/scripts/utils/queryBuilder.js"></script>
-    <script src="/scripts/factories/photographer.js"></script>
-    <script src="/scripts/pages/index.js"></script>
+    <script type="module" src="scripts/pages/index.js"></script>
   </body>
 </html>
