--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="/css/style.css" rel="stylesheet" type="text/css" />
     <link href="/css/index.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/assets/favicon.png">
@@ -9,12 +8,12 @@
     <title>Fisheye</title>
   </head>
   <body>
-    <header>
-        <img src="/assets/images/logo.png" class="logo" />
+    <header role="banner" aria-label="en tête de la page d'acceuil">
+        <a href="/"><img src="/assets/images/logo.png" class="logo" alt="Fisheye Home page" /></a>
         <h1>Nos photographes</h1>
     </header>
-    <main id="main">
-        <div class="photographer_section"></div>
+    <main id="main" role="main" aria-label="contenu principal de la page d'accueil">
+        <section class="photographer-section"></section>
     </main>
     <script type="module" src="scripts/pages/home.page.js"></script>
   </body>
