--- a/photographer.html
+++ b/photographer.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <link href="css/modal.css" rel="stylesheet" type="text/css" />
+    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
