--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="/css/index.css" rel="stylesheet" type="text/css" />
+    <link href="./css/index.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header role="banner" aria-label="en tête de la page d'acceuil">
-        <a href="/"><img src="/assets/images/logo.png" class="logo" alt="Fisheye Home page" /></a>
+        <a href="/"><img src="./assets/images/logo.png" class="logo" alt="Fisheye Home page" /></a>
         <h1>Nos photographes</h1>
     </header>
     <main id="main" role="main" aria-label="contenu principal de la page d'accueil">
