--- a/photographer.html
+++ b/photographer.html
@@ -5,7 +5,7 @@
     <link href="css/modal.css" rel="stylesheet" type="text/css" />
     <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="/assets/favicon.png">
+    <link rel="icon" type="image/png" href="./assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d966140df4.js" crossorigin="anonymous"></script>
     <title>Fisheye - photographe </title>
