--- a/photographer.html
+++ b/photographer.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
-    <link href="css/modal.css" rel="stylesheet" type="text/css" />
-    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="./assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/d966140df4.js" crossorigin="anonymous"></script>
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <a href="/" title="Lien vers la page d'accueil"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
-    </header>
-    <main id="main">
-      <section class="photograph-header" role="region">
-        <button class="contact_button">Contactez-moi</button>
-      </section>
-      <div id="contact_modal" role="dialog" aria-labelledby="modal_title">
-        <div class="modal">
-          <header>
-            <h2 role="heading" id="modal_title" class="contact_me" tabindex="0" >Contactez-moi</h2>
-            <img class="close_button" src="assets/icons/close.svg" tabindex="0" />
-          </header>
-          <form action="photographer.html" method="get">
-              <label role="label" for="firstname" id="firstname_label">Prénom</label>
-              <input role="Text field" type="text" id="firstname" name="firstname" aria-labelledby="firstname_label"/>
-              <label role="label" for="name" id="name_label">Nom</label>
-              <input role="Text field" type="text" id="name" name="name" aria-labelledby="name_label" />
-              <label role="label" for="email" id="email_label">Email</label>
-              <input role="Text field" type="email" id="email" name="email" aria-labelledby="email_label"/>
-              <label role="label" for="message" id="textarea_label">Votre message</label>
-              <textarea role="Text field" id="message" name="message" aria-labelledby="textarea_label"></textarea>
-            <button class="contact_button validate_form" type="submit">Send</button>
-          </form>
-        </div>
+
+<head>
+  <link href="css/photographer.css" rel="stylesheet" type="text/css" />
+  <link href="css/modal.css" rel="stylesheet" type="text/css" />
+  <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="./assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d966140df4.js" crossorigin="anonymous"></script>
+  <title>Fisheye - photographe </title>
+</head>
+
+<body>
+  <header>
+    <a href="/" title="Lien vers la page d'accueil"><img src="assets/images/logo.png" class="logo"
+        alt="Fisheye Home page" /></a>
+  </header>
+  <main id="main">
+    <section class="photograph-header" role="region">
+      <button class="contact_button">Contactez-moi</button>
+    </section>
+    <div id="contact_modal" role="dialog" aria-labelledby="modal_title">
+      <div class="modal">
+        <header>
+          <h2 role="heading" id="modal_title" class="contact_me" tabindex="0">Contactez-moi</h2>
+          <img class="close_button" src="assets/icons/close.svg" tabindex="0" />
+        </header>
+        <form method="post" id="contact_form">
+          <label role="label" for="firstname" id="firstname_label">Prénom</label>
+          <input role="Text field" type="text" id="firstname" name="firstname" aria-labelledby="firstname_label" />
+          <label role="label" for="name" id="name_label">Nom</label>
+          <input role="Text field" type="text" id="name" name="name" aria-labelledby="name_label" />
+          <label role="label" for="email" id="email_label">Email</label>
+          <input role="Text field" type="email" id="email" name="email" aria-labelledby="email_label" />
+          <label role="label" for="message" id="textarea_label">Votre message</label>
+          <textarea role="Text field" id="message" name="message" aria-labelledby="textarea_label"></textarea>
+          <button id="send_form" class="contact_button" type="button">Send</button>
+        </form>
       </div>
-    </main>
-    <script type="module" src="scripts/pages/photographer.page.js"></script>
-  </body>
+    </div>
+  </main>
+  <script type="module" src="scripts/pages/photographer.page.js"></script>
+</body>
+
 </html>
