refacto keyboard modal navigation

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header role="banner" aria-label="en tête de la page d'acceuil">
-        <a href="/"><img src="./assets/images/logo.png" class="logo" alt="Fisheye Home page" /></a>
-        <h1>Nos photographes</h1>
+        <a href="/oc-p6-fisheye/"><img src="./assets/images/logo.png" class="logo" alt="Fisheye Home page" /></a>
+        <h1 tabindex="0">Nos photographes</h1>
     </header>
     <main id="main" role="main" aria-label="contenu principal de la page d'accueil">
         <section class="photographer-section"></section>
